# Arcade

./: .gitignore  CMakeLists.txt
.github/workflows/: mirror.yml
src/: main.cpp
src/Core/: Exceptions.hpp  LibraryLoader.cpp  LibraryLoader.hpp
src/Graphics/sdl2/: ResourceManager.cpp  ResourceManager.hpp  sdl2.cpp  sdl2.hpp
src/Shared/: GameEvent.cpp  GameEvent.hpp  GameView.cpp  GameView.hpp  IDisplay.hpp  IGame.hpp  IGameView.hpp  ResourceIdentifier.cpp  ResourceIdentifier.hpp  ResourceRegistry.cpp  ResourceRegistry.hpp
src/Shared/Resource/: ResourceIdentifier.cpp  ResourceIdentifier.hpp  ResourceRegistry.cpp  ResourceRegistry.hpp
src/Shared/Scene/: Drawable.cpp  Drawable.hpp  GamePosition.hpp  GameScene.cpp  GameScene.hpp  GameText.hpp
src/graphics/sdl2/: ResourceManager.cpp  ResourceManager.hpp  sdl2.cpp  sdl2.hpp
